switching old content to new system

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4618,7 +4618,7 @@
  TUR_defense_of_trablusgarp:0 "Defense of Trablusgarp"
  TUR_defense_of_trablusgarp_desc:0 "Our last remaining territories in Africa, Trablusgarp, are being targeted by European colonial powers. While the region is sceptic to our rule, they're more than happy to side with us against the imperialists. By rallying the local population, we can increase our chances to defend Trablusgarp."
  TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+10%§!\n\n"
- TUR_increase_trablusgarp_centralization_10:0 "Modify §YCentralization§! of §YTrablusgarp Vilayet§! by §G+10%§!"
+ TUR_increase_trablusgarp_centralization_15:0 "Modify §YCentralization§! of §YTrablusgarp Vilayet§! by §G+15%§!"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
  TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-5.0%§!\n\n"
@@ -4630,7 +4630,7 @@
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
  TUR_increase_taxes_on_albanians_tt:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions."
  TUR_increase_kosova_centralization_10:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+10%§!"
- TUR_increase_manastir_centralization_5:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+10%§!"
+ TUR_increase_manastir_centralization_5:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+5%§!"
  TUR_increase_yanya_centralization_10:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+10%§!"
  TUR_increase_iskodra_centralization_10:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+10%§!"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
@@ -4671,7 +4671,7 @@
  TUR_OPDA_trigger_tooltip:0 "One of the following must be true:\n   Has indutrial concern §YOttoman Public Debt Administration§!\n   Has national spirit §YOttoman Public Debt§!"
  TUR_construct_hindiya_barrage:0 "Construct Hindiya Barrage"
  TUR_construct_hindiya_barrage_desc:0 "The Euphrates river gives us opportunities to construct renewable energy stations to use it to our advantage. Hindiya Barrage, a barrage that was proposed to be constructed in Euphrates, will help us with producing electricity."
- TUR_construct_hindiya_barrage_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+3%§!\n\n"
+ TUR_increase_baghdad_centralization_5:0 "Modify §YCentralization§! of §YBaghdad Vilayet§! by §G+5%§!"
  TUR_form_turkish_petroleum_company:0 "Form Turkish Petroleum Company"
  TUR_form_turkish_petroleum_company_desc:0 "We can't let the foreigners drill our soil as they please. We must compete against them for the sovereignty over our own oil fields. By forming Turkish Petroleum Company, we can combat foreign domain our our oil fields."
  TUR_umur_u_nafia_muduriyet_i_umumiyesi:0 "Umur-u Nafia Müdüriyet-i Umumiyesi"
