--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2479,6 +2479,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_utilize_anatolian_grain_desc:0 "Though Anatolia is rich in agricultural products and grain, the lack of infrastructure prevents us from importing the products to the big cities to be consumed. If we lay down enough roads, we can easily bring these grains to the cities."
  TUR_utilize_anatolian_grain_taken_10_times:0 "This decision can only be taken §Y10 times§! (current amounts: [?TUR_utilize_anatolian_grain_var|00Y])"
  TUR_utilize_anatolian_grain_bonus:0 "This decision can be taken since national focus §YForming National Supply Connections§! been completed (can be selected [?TUR_utilize_anatolian_grain_bonus|00Y] more times)"
+ TUR_increase_aydin_centralization_3:0 "Modify §YCentralization§! of §YAydın Vilayet§! by §G+3%§!"
+ TUR_increase_kastamonu_centralization_3:0 "Modify §YCentralization§! of §YKastamonu Vilayet§! by §G+3%§!"
+ TUR_increase_trabzon_centralization_3:0 "Modify §YCentralization§! of §YTrabzon Vilayet§! by §G+3%§!"
+ TUR_increase_adana_centralization_3:0 "Modify §YCentralization§! of §YAdana Vilayet§! by §G+3%§!"
+ TUR_increase_aleppo_centralization_3:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+3%§!"
+ TUR_increase_mamuret_ul_aziz_centralization_3:0 "Modify §YCentralization§! of §YMamuret-ul-Aziz Vilayet§! by §G+3%§!"
+ TUR_increase_ankara_centralization_3:0 "Modify §YCentralization§! of §YAnkara Vilayet§! by §G+3%§!"
+ TUR_increase_konya_centralization_3:0 "Modify §YCentralization§! of §YKonya Vilayet§! by §G+3%§!"
+ TUR_increase_diyarbekir_centralization_3:0 "Modify §YCentralization§! of §YDiyarbakir Vilayet§! by §G+3%§!"
+ TUR_increase_sivas_centralization_3:0 "Modify §YCentralization§! of §YSivas Vilayet§! by §G+3%§!"
+ TUR_expand_foreign_trade_ports:0 "Expand Foreign Trade Ports in [FROM.GetName]"
+ TUR_expand_foreign_trade_ports_desc:0 "Our empire is dependent on foreign trade. By expanding the capabilities of ports in [FROM.GetName] we can both increase local productivity and also central authority."
  TUR_abandon_war_agriculture:0 "Abandon War Agriculture"
  TUR_abandon_war_agriculture_desc:0 "Introduced during the war, war agriculture was supposed to ease the strained food resouces. Yet the success of the war has been rather negligible. Under these circumstances, it's best to get rid of the law entirely."
  TUR_lift_war_tax:0 "Lift War Tax"
