fixed a small bit

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4840,6 +4840,7 @@
  TUR_expand_trade_ports:0 "Expand Trade Ports"
  TUR_expand_trade_ports_desc:0 "There are several centralized cities and large trading ports in our empire benefiting from global trade. By expanding ports that can serve as a hub in global trade, we can foster regional development."
  TUR_expand_trade_ports_tt:0 "Unlocks £decision_icon_small  §YExpand Foreign Trade§! Decisions, allowing us to improve several large metropolises and expanding their §Yforeign trade§!."
+ TUR_increase_konstantiniyye_centralization_5:0 "Modify §YCentralization§! of §YKonstantiniyye Vilayet§! by §G+5%§!"
  TUR_protect_local_producers:0 "Protect Local Producers"
  TUR_protect_local_producers_desc:0 "Market deregulation comes at a cost. Previously forces that protected our population has been dissolved in favor of free market. We must introduce some checks and balances for the best of our population."
  TUR_listian_protectionism:0 "Listian Protectionism"
