--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10343,9 +10343,9 @@ skip_focus:0 "§YSkip Focus :§!"
  NWA_with_german_support: "Military Aid From Germany"
  NWA_with_german_support_desc: "The Germans have agreed to provide us weapons to help us take Petrograd. In exchange the Germans expect us to establish pro-German government in Petrograd after we capture it."
  NWA_without_german_support: "A Struggle of Our Own"
- NWA_without_german_support_desc: "Even though the German's won't help us we should not give up. Petrograd is only about 260km away from Pskov and if we can equip ourselves and ideally raise a few more units we will get there under a week after we start our offensive."
+ NWA_without_german_support_desc: "Even though the Germans won't help us we should not give up. Petrograd is only about 260km away from Pskov and if we can equip ourselves and ideally raise a few more units we will get there under a week after we start our offensive."
  NWA_germans_agreed_to_help: "§Y[GER.getName]§!: agreed to help us"
- NWA_ask_for_estonian_help: "Secure the Estonian Support"
+ NWA_ask_for_estonian_help: "Secure Estonian Support"
  NWA_ask_for_estonian_help_completed_tt: "Has completed focus §YAsk for Estonian help§!"NWA_ask_for_estonian_help_desc: "Now when the German troops are retreating and our army isn't ready we have to seek support from somewhere. This also has to be done quickly as we don't have much time before the Red Army starts their attack. [EST.GetName] is our best and realisticly only option as our other allies are too far away. "
  NWA_ask_for_estonian_help_tt: "When we start our attack to Petrograd [EST.GetFlag]§C[EST.GetNameDef]§! will assist us in our attack."
  NWA_german_advisors: "German Military Advisors"
@@ -10422,7 +10422,7 @@ skip_focus:0 "§YSkip Focus :§!"
  NWA_repair_baltic_fleet_desc: "All of the Gangut class ships except Petropavlovsk were laid up by the Bolsheviks before we took Petrograd but now when we control Petrograd we can retrieve them. Even though repairing them will take quite a while it would still be worth it in the long run."
  NWA_repair_baltic_fleet_tt: "The three damaged §YGangut class battleships§! which we captired when we took Petrogard will be moved to the Baltic Shipyard for repairs"
  NWA_improve_officer_corps: "Solve the Problems Within Officer Corps"
- NWA_improve_officer_corps_desc: "Since the estblishment of our army there have been many problems within the officer corps such as placing officers battalion level officers to lead regiments. Other issue within the officer corps is unwillingness to work together. We have to solve the problems within the officer corps if we want our army to work properly."
+ NWA_improve_officer_corps_desc: "Since the establishment of our army there have been many problems within the officer corps such as placing officers battalion level officers to lead regiments. Other issue within the officer corps is unwillingness to work together. We have to solve the problems within the officer corps if we want our army to work properly."
  NWA_restart_putilov_production: "Restart Armored Car Production"
  NWA_restart_putilov_production_desc: "Before the strikes that started the first revolution Putilov factory was produced armored cars along their other products. Now when we control the factory once more we can continue the armored car production to gain an advantage over the Bolsheviks."
  #NWA day tooltips  
@@ -10451,7 +10451,7 @@ skip_focus:0 "§YSkip Focus :§!"
  ALB_an_old_option:0 "An Old Option"
  ALB_an_old_option_desc:0 "While we gained our independence, that was not something we fought for, for the most part. A large majority of our population would've been satisfied with staying under Ottoman suzerainty, under protection of Ottoman Sultan and Caliph of the Islamic world. Perhaps we should listen to their cries and support them. Parts of our government had already came in contact with Ottoman Committee of Union and Progress and they had promised their support in our plans. However, we should know that this move will not be taken lightly by our international protectors, our neighbours and our legitimacy would most certainly suffer even if the plan succeeded, considering how we are willingly returning under their thumb."
  ALB_prepare_ottoman_coup:0 "Prepare Ottoman Coup"
- ALB_prepare_ottoman_coup_desc:0 "With majority of our Muslim population supporting the motion, along with Ottoman promises of a benevolent rule, autonomy and support in our irrdentist claim, we are ready to start preparations for the self-coup of Ismail Qemali. However, we should be careful, should Serbia or International Control Commission figure out what are we attempting to do, the consequences of our actions might be unforgiving."
+ ALB_prepare_ottoman_coup_desc:0 "With a majority of our Muslim population supporting the motion, along with Ottoman promises of a benevolent rule, autonomy and support in our irrdentist claim, we are ready to start preparations for the self-coup of Ismail Qemali. However, we should be careful, should Serbia or International Control Commission figure out what are we attempting to do, the consequences of our actions might be unforgiving."
  ALB_nationalist_agitation_in_kosmet:0 "Nationalist Agitation"
  ALB_nationalist_agitation_in_kosmet_desc:0 "In Serbia's newly conquered province of Kosovo there is large amount of Albanians who are dissatisfied with Serbian tyrranical rule. We can perhaps persuade them into transfering their words with actions. Any action would be desirable, any killed Serbian soldier, civilian, administrator, teacher, anyone, would account for our cause."
  ALB_contact_macedonians:0 "Contact Macedonians"
